--- a/deskover-ecommerce-website/src/main/resources/templates/otp.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/otp.html
@@ -17,12 +17,17 @@
     <form action="/orders" method="post">
 	<h1 class="text-center">Mã xác nhận đã được gửi đến điện thoại của bạn</h1>
 	<div class="container">
-	  <div class="col-lg-8 mx-auto text-center">
+	  <div class="col-lg-8 row mx-auto text-center">
 	    <input th:object="${otp}" name="otp" type="text" class="form-control" placeholder="Nhập mã xác thực gồm 6 chữ số"> <br>
-	    <button class="btn btn-info" >Tiếp tục</button> <br>
+	    <div class="col-md-6"> <br>
+	    	<button formaction="/reOtp" method="post" class="btn btn-info mx-auto text-center" ><i class="fa fa-repeat" aria-hidden="true"></i> Gửi lại mã</button> <br></div>
+	    <div class="col-md-6"> <br>
+	    	<button class="btn btn-info " ><i class="fa fa-arrow-right" aria-hidden="true"></i> Tiếp tục </button> <br></div>
 	  </div> 
     </div><br>
     </form> 
+
+    	
     <h4 th:text="${msg}" class="text-center text-danger"></h4> 
   </div>
 </body>
