--- a/deskover-ecommerce-website/src/main/resources/templates/shop.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/shop.html
@@ -24,7 +24,7 @@
                 <div class="order-lg-2 mb-3 mb-lg-0 pt-lg-2">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb breadcrumb-light flex-lg-nowrap justify-content-center justify-content-lg-start">
-                            <li class="breadcrumb-item"><a class="text-nowrap" href="index.html"><i class="ci-home"></i>Trang chủ</a></li>
+                            <li class="breadcrumb-item"><a class="text-nowrap" href="index"><i class="ci-home"></i>Trang chủ</a></li>
                             </li>
                             <li class="breadcrumb-item text-nowrap active" aria-current="page">Cửa hàng</li>
                         </ol>
@@ -80,7 +80,7 @@
                                 <h3 class="widget-title">Khoảng giá 
                                     <div th:text="${session.sessionValue}">0</div>
                                 </h3>
-                                <div class="range-slider" data-start-min="0" data-start-max="50000000" data-min="0" data-max="50000000" data-step="1000">
+                                <div class="range-slider" data-start-min="0" data-start-max="100000000" data-min="0" data-max="100000000 " data-step="1000">
                                     <div class="range-slider-ui"></div>
                                     <div class="pb-1">
                                         <div class="w-100 mb-2">
