--- a/deskover-ecommerce-website/src/main/resources/templates/index.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/index.html
@@ -220,7 +220,7 @@
             </div>
         </section>
 
-        <section class="container pt-5 pb-5 bg-opacity-10" th:if="${products != null}">
+        <section class="container pt-5 pb-5 bg-opacity-10">
             <!-- Heading-->
             <div class="text-center">
                 <!-- <img src="https://deo.shopeemobile.com/shopee/shopee-pcmall-live-sg/flashsale/fb1088de81e42c4e538967ec12cb5caa.png"
