--- a/deskover-dashboard-website/src/app/components/home/manage/brands/brands.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/brands/brands.component.html
@@ -47,7 +47,7 @@
               <th class="align-middle">Ảnh</th>
               <th class="align-middle">Tên</th>
               <th class="align-middle">Slug</th>
-              <th class="align-middle">Mô tả</th>
+              <!--<th class="align-middle">Mô tả</th>-->
               <th class="align-middle text-center">Ngày cập nhật</th>
               <th class="align-middle text-center">Cập nhật bởi</th>
               <th class="align-middle text-end"></th>
@@ -66,9 +66,9 @@
               <td class="align-middle">
                 {{ brand.slug }}
               </td>
-              <td class="align-middle">
+              <!--<td class="align-middle">
                 {{ brand.description }}
-              </td>
+              </td>-->
               <td class="align-middle text-center">
                 {{ brand.modifiedAt | date: 'dd/MM/yyyy' }}
               </td>
