--- a/deskover-dashboard-website/src/app/components/home/manage/customers/customers.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/customers/customers.component.html
@@ -49,7 +49,7 @@
             <tr class="table-light" *ngFor="let user of customers; let i = index">
               <td class="align-middle">
                 <div class="frame frame-50 img-thumbnail">
-                  <img [src]="getSrc(user.avatar)" class="img-fluid">
+                  <img [src]="getSrc(user.avatar)" class="img-fluid" alt=" ">
                 </div>
               </td>
               <td class="align-middle">
