--- a/deskover-dashboard-website/src/app/components/layouts/header/user-info/user-info.component.html
+++ b/deskover-dashboard-website/src/app/components/layouts/header/user-info/user-info.component.html
@@ -50,12 +50,10 @@
     </li> -->
     <!-- Menu Footer-->
     <li class="user-footer">
-      <!-- <a [routerLink]="['/profile']" class="btn btn-default btn-flat">
+       <a [routerLink]="['/profile']" class="btn btn-default btn-flat w-50">
           Hồ sơ
-      </a> -->
-      <a (click)="logout()" class="btn btn-default btn-flat float-end w-100"
-      >Đăng xuất</a
-      >
+      </a>
+      <a (click)="logout()" class="btn btn-default btn-flat w-50">Đăng xuất</a>
     </li>
   </ng-container>
 </app-dropdown>
