--- a/deskover-dashboard-website/src/app/components/home/manage/orders/orders.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/orders/orders.component.html
@@ -34,17 +34,17 @@
             <button type="button" class="btn bg-faded-primary w-sm-100 rounded-pill me-2"
                     (click)="orderStatusCode = 'C-XN'; rerender()">
               <span class="text-dark">Chờ xác nhận</span>
-              <span class="badge text-bg-secondary ms-2">{{getNumberOrderByStatus('C-XN')}}</span>
+              <span class="badge text-bg-secondary ms-2">{{numberOfPendingConfirmOrder}}</span>
             </button>
             <button type="button" class="btn bg-faded-warning w-sm-100 rounded-pill me-2"
                     (click)="orderStatusCode = 'C-HUY'; rerender()">
               <span class="text-dark">Chờ huỷ</span>
-              <span class="badge text-bg-secondary ms-2">{{getNumberOrderByStatus('C-HUY')}}</span>
+              <span class="badge text-bg-secondary ms-2">{{numberOfPendingCancelOrder}}</span>
             </button>
             <button type="button" class="btn bg-faded-danger w-sm-100 rounded-pill"
                     (click)="orderStatusCode = 'HUY'; rerender()">
               <span class="text-dark">Đã huỷ/Hoàn tiền</span>
-              <span class="badge text-bg-secondary ms-2">{{getNumberOrderByStatus('HUY')}}</span>
+              <span class="badge text-bg-secondary ms-2">{{numberOfCanceledOrder}}</span>
             </button>
           </div>
         </div>
@@ -59,22 +59,25 @@
               <th class="align-middle">QR Code</th>
               <th class="align-middle">Mã đơn hàng</th>
               <th class="align-middle">Tên khách hàng</th>
-              <th class="align-middle">Địa chỉ</th>
+              <th class="align-middle">Khu vực</th>
               <th class="align-middle text-center">Đơn giá</th>
               <th class="align-middle text-center">Ngày tạo</th>
               <th class="align-middle" [ngClass]="orderStatusCode !== null ? 'd-none' : 'd-table-cell'">
                 Trạng thái đơn hàng
               </th>
-              <th class="align-middle">Thanh toán</th>
+              <th class="align-middle" [ngClass]="isCompletedOrder(orderStatusCode) ? 'd-none' : 'd-table-cell'">
+                Trạng thái thanh toán
+              </th>
               <th class="align-middle text-end"></th>
             </tr>
             </thead>
             <tbody class="table-light" *ngIf="orders?.length !== 0">
             <tr *ngFor="let order of orders; let i = index">
               <td class="align-middle">
-                <a href="javascript:void(0)" (click)="openImageModal(imageModal, order)">
+                <a class="frame frame-50 img-thumbnail" href="javascript:void(0)"
+                   (click)="openImageModal(imageModal, order)">
                   <img [src]="order.qrCode ? getQrCode(order.qrCode) : 'assets/images/no-image.png'" alt=" "
-                       class="img-thumbnail img-50">
+                       class="img-fluid">
                 </a>
               </td>
               <td class="align-middle">
@@ -84,7 +87,8 @@
                 {{ order.fullName }}
               </td>
               <td class="align-middle">
-                {{ order.orderDetail?.address }}
+                {{ order.orderDetail?.province }}
+                <!--{{ getProvince(order.orderDetail?.address) }}-->
               </td>
               <td class="align-middle text-center">
                 {{ order.unitPrice | number:'1.0-0' }}₫
@@ -93,28 +97,28 @@
                 {{ order.createdAt | date: 'dd/MM/yyyy, HH:mm' }}
               </td>
               <td class="align-middle" [ngClass]="orderStatusCode !== null ? 'd-none' : 'd-table-cell'">
-                <span class="badge rounded-pill"
+                <span class="badge rounded-pill fs-6"
                       [ngClass]="getClassesByOrder(order)">{{ order.orderStatus?.status }}</span>
               </td>
-              <td class="align-middle">
-                <span
+              <td class="align-middle" [ngClass]="isCompletedOrder(orderStatusCode) ? 'd-none' : 'd-table-cell'">
+                <span class="fw-semibold"
                   [ngClass]="getClassesByPayment(order)">{{ order.statusPayment?.status }}</span>
               </td>
               <td class="align-middle text-end">
                 <div class="d-inline-block" *ngIf="orderStatusCode && hasRole()">
                   <button type="button" class="btn btn-sm btn-warning me-1" placement="top" tooltip="Xác nhận hoàn tiền"
                           container="body" (click)="refundOrder(order)"
-                          *ngIf="isNotRefunded(order)">
+                          *ngIf="isNotRefundedOrder(order)">
                     <i class="fa-solid fa-hand-holding-dollar"></i>
                   </button>
                   <button type="button" class="btn btn-sm btn-success me-1" placement="top"
                           tooltip="Duyệt đơn" container="body" (click)="confirmOrder(order)"
-                          *ngIf="isPendingConfirm(order)">
+                          *ngIf="isPendingConfirmOrder(order)">
                     <i class="fa-solid fa-circle-check"></i>
                   </button>
                   <button type="button" class="btn btn-sm btn-danger me-1" placement="top" tooltip="Huỷ đơn"
                           container="body" (click)="cancelOrder(order)"
-                          *ngIf="isPendingConfirm(order) || isPendingCancel(order)">
+                          *ngIf="isPendingConfirmOrder(order) || isPendingCancelOrder(order.orderStatus?.code)">
                     <i class="fa-solid fa-circle-xmark"></i>
                   </button>
                 </div>
@@ -249,12 +253,12 @@
   </div>
   <div class="modal-footer" *ngIf="hasRole()">
     <button type="button" class="btn btn-sm btn-success"
-            *ngIf="isPendingConfirm(order)"
+            *ngIf="isPendingConfirmOrder(order)"
             (click)="confirmOrder(order)">
       Xác nhận đơn
     </button>
     <button type="button" class="btn btn-sm btn-danger"
-            *ngIf="isPendingConfirm(order) || isPendingCancel(order)"
+            *ngIf="isPendingConfirmOrder(order) || isPendingCancelOrder(order.orderStatus?.code)"
             (click)="cancelOrder(order)">
       Huỷ đơn
     </button>
@@ -262,7 +266,9 @@
 </ng-template>
 <ng-template #imageModal>
   <div class="modal-body" (click)="modalRef?.hide()">
-    <img [src]="order.qrCode ? getQrCode(order.qrCode) : 'assets/images/no-image.png'" alt=" "
-         class="img-fluid">
+    <div class="ratio ratio-1x1">
+      <img [src]="order.qrCode ? getQrCode(order.qrCode) : 'assets/images/no-image.png'" alt=" "
+           class="img-fluid">
+    </div>
   </div>
 </ng-template>
