--- a/deskover-dashboard-website/src/assets/scss/_common.scss
+++ b/deskover-dashboard-website/src/assets/scss/_common.scss
@@ -30,7 +30,14 @@
     min-width: 50px;
     min-height: 50px;
     width: 50px;
+    height: 50px;
   }
+
+}
+
+.img-fluid {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .img-50 {
