--- a/deskover-dashboard-website/src/styles.scss
+++ b/deskover-dashboard-website/src/styles.scss
@@ -1,6 +1,6 @@
 /* Scrollbar */
-/*::-webkit-scrollbar {
-  height: 5px;
+::-webkit-scrollbar {
+  height: 0;
   width: 5px;
 }
 
@@ -11,11 +11,16 @@
 ::-webkit-scrollbar-thumb {
   background: rgba(104, 105, 119, 0.4);
   border-radius: 20px;
-}*/
-::-webkit-scrollbar {
-  width: 0px;
-  background: transparent;
 }
+
+/*::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}*/
+
+@import "variable";
+@import "bootstrap";
+@import "common";
 
 @import url('https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.3.0/css/flag-icon.min.css');
@@ -29,10 +34,6 @@
 @import '~datatables.net-bs5/css/dataTables.bootstrap5.min.css';
 @import '~datatables.net-responsive-bs5/css/responsive.bootstrap5.min.css';
 @import "~animate.css/animate.min.css";
-
-@import "variable";
-@import "bootstrap";
-@import "common";
 
 body {
   width: 100vw;
